src/objects/Google_Coupon__c.object
<CustomObject>
    <description>Coupons that may be distributed to our customers</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>BAP-4177
Getting Google Shopping redemption codes into SF and then sending redemption email</description>
        <inlineHelpText>The value of the coupon</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <description>BAP-4177
Getting Google Shopping redemption codes into SF and then sending redemption email</description>
        <formula>AND(NOT(Expired__c), NOT(Distributed__c))</formula>
        <inlineHelpText>Is this coupon available for distribution?</inlineHelpText>
        <label>Available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coupon_Code__c</fullName>
        <description>BAP-4177
Getting Google Shopping redemption codes into SF and then sending redemption email</description>
        <externalId>true</externalId>
        <inlineHelpText>The Google redemption code</inlineHelpText>
        <label>Coupon Code</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Date_Distributed__c</fullName>
        <description>BAP-4177
Getting Google Shopping redemption codes into SF and then sending redemption email</description>
        <inlineHelpText>The date that the coupon was distributed for the related store</inlineHelpText>
        <label>Date Distributed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distributed__c</fullName>
        <description>BAP-4177
Getting Google Shopping redemption codes into SF and then sending redemption email</description>
        <formula>NOT(ISBLANK( Store__c ))</formula>
        <inlineHelpText>Has this coupon been distributed to a store?</inlineHelpText>
        <label>Distributed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expired__c</fullName>
        <description>For BAP-4177 Getting Google Shopping redemption codes into SF and then sending redemption email</description>
        <formula>Expires__c &lt; TODAY()</formula>
        <inlineHelpText>Has this coupon expired?</inlineHelpText>
        <label>Expired?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expires__c</fullName>
        <description>For BAP-4177
Getting Google Shopping redemption codes into SF and then sending redemption email</description>
        <inlineHelpText>Date the coupon expires</inlineHelpText>
        <label>Expires</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>BAP-4177
Getting Google Shopping redemption codes into SF and then sending redemption email</description>
        <inlineHelpText>The store opportunity that the coupon was used for</inlineHelpText>
        <label>Store</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only purchased stores may be given a Google Shopping Code</errorMessage>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>Store Purchase</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Google_Shopping_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Google Coupon</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COUPON-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Google Coupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>